# hetsar

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
hetsar/: estimators.py  helpers.py  utils.py
hetsar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hetsar/datasets/: utils.py
hetsar/datasets/simulated/: weight_matrix_N025.csv
