[metadata]
# replace with your username:
name = hetsar-ida-b
version = 0.1
author = Ida Johnsson
author_email = ida.b.johnsson@gmail.com
description = HETSAR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ida-j/hetsar
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6