[metadata]
# replace with your username:
name = hetsar
version = 2.0
author = Ida Johnsson
author_email = ida.b.johnsson@gmail.com
description = Estimation of spatial autoregressive panel data models with heterogeneous coefficients
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ida-j/hetsar
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
